# src/entity/order.go
@@ -15,6 +15,13 @@ const (
 	Cancelled OrderStatus = "cancelled"
 )
 
+type OrderType string
+
+const (
+	External OrderType = "external"
+	Internal OrderType = "internal"
+)
+
 type Order struct {
 	ID          uuid.UUID   `json:"id"`
 	ClientName  string      `json:"clientName"`
@@ -23,11 +30,12 @@ type Order struct {
 	Quantity    int         `json:"quantity"`
 	DesiredDate time.Time   `json:"desiredDate"`
 	Status      OrderStatus `json:"status"`
+	Type        OrderType   `json:"type"`
 	CreatedAt   time.Time   `json:"createdAt"`
 }
 
 func NewOrder(clientName string, stationToID uuid.UUID, wagonType WagonType,
-	quantity int, desiredDate time.Time) *Order {
+	quantity int, desiredDate time.Time, orderType OrderType) *Order {
 	return &Order{
 		ID:          uuid.New(),
 		ClientName:  clientName,
@@ -36,6 +44,7 @@ func NewOrder(clientName string, stationToID uuid.UUID, wagonType WagonType,
 		Quantity:    quantity,
 		DesiredDate: desiredDate,
 		Status:      Pending,
+		Type:        orderType,
 		CreatedAt:   time.Now(),
 	}
 }
